more analyses on loading

--- a/src/notebooks/chromadb/testing_query.ipynb
+++ b/src/notebooks/chromadb/testing_query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,40 +23,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# medium size db, with metadata\n",
-    "chroma_client = chromadb.PersistentClient(DefaultPath.db_path.chroma + f'v_m_0')\n",
+    "chroma_client = chromadb.PersistentClient(DefaultPath.db_path.chroma + 'single_collection' + 'v_0_25000_add_label_False')\n",
     "\n",
     "tabenc = TableEncoder()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "sloth_tested_pairs = pd.read_csv(\n",
-    "    DefaultPath.data_path.wikitables + 'train_set_turl_malaguti.csv',\n",
-    "    nrows=10000\n",
+    "    DefaultPath.data_path.wikitables + 'train_set_turl_malaguti.csv'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14209"
+       "113098"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,10 +67,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RANDOM_ID_UPPER_BOUND = 500000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        Iterate over all lines.\n",
+      "\n",
+      "        This is the iterator equivalent to repeatedly calling\n",
+      "        :py:meth:`~Reader.read()`. If no arguments are specified, this\n",
+      "        is the same as directly iterating over this :py:class:`Reader`\n",
+      "        instance.\n",
+      "\n",
+      "        When `skip_invalid` is set to ``True``, invalid lines will be\n",
+      "        silently ignored.\n",
+      "\n",
+      "        See :py:meth:`~Reader.read()` for a description of the other\n",
+      "        arguments.\n",
+      "        \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(jsonlines.Reader.iter.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_random_table\n",
+    "\n",
     "wikitables = {}\n",
     "\n",
     "with jsonlines.open(DefaultPath.data_path.wikitables + 'medium_train_tables.jsonl', 'r') as reader:\n",
