confronto con la versione scala

--- a/experiments/josie/analysis.ipynb
+++ b/experiments/josie/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "'/data4/nanni/tesi-magistrale'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "(450,)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,10 +341,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     300.000000\n",
+       "mean     1762.293333\n",
+       "std      1235.048757\n",
+       "min         1.000000\n",
+       "25%       275.000000\n",
+       "50%      2070.000000\n",
+       "75%      2857.250000\n",
+       "max      4519.000000\n",
+       "Name: duration, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_py = pd.read_csv('/data4/nanni/tesi-magistrale/data/josie-tests/set1m_py/results/result_k_20.csv')\n",
+    "set_jar = pd.read_csv('/data4/nanni/tesi-magistrale/data/josie-tests/set1m_jar/results/result_k_20.csv')\n",
+    "\n",
+    "set_py['duration'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     300.000000\n",
+       "mean     1989.663333\n",
+       "std      1264.243236\n",
+       "min         0.000000\n",
+       "25%       759.250000\n",
+       "50%      2348.000000\n",
+       "75%      3016.250000\n",
+       "max      4168.000000\n",
+       "Name: duration, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_jar['duration'].describe()"
+   ]
   }
  ],
  "metadata": {
