more tests, updated analysis plotting, fixed bugs

--- a/experiments/scripts/py/analysis_pl.ipynb
+++ b/experiments/scripts/py/analysis_pl.ipynb
@@ -14,9 +14,7 @@
     "import multiprocessing as mp\n",
     "from collections import defaultdict\n",
     "\n",
-    "from tools.utils.settings import DefaultPath as defpath\n",
-    "from tools.utils.mongodb_utils import get_mongodb_collections, get_one_document_from_mongodb_by_key\n",
-    "from tools.utils.utils import create_token_set, apply_sloth"
+    "from tools.utils.settings import DefaultPath as defpath"
    ]
   },
   {
@@ -462,6 +460,44 @@
     "\n",
     "sum(x[1] for x in (tr & rr).items())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('josie', 'set'): 'tab:blue',\n",
+       " ('josie', 'bag'): 'tab:orange',\n",
+       " ('lshforest', 'set'): 'tab:green',\n",
+       " ('lshforest', 'bag'): 'tab:red',\n",
+       " ('embedding', 'fasttext'): 'tab:purple'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.colors as mcolors\n",
+    "\n",
+    "colors = list(mcolors.TABLEAU_COLORS.keys())\n",
+    "methods = [('josie', 'set'), ('josie', 'bag'), ('lshforest', 'set'), ('lshforest', 'bag'), ('embedding', 'fasttext')]\n",
+    "methods = {m: c for m, c in zip(methods, colors[:len(methods)])}\n",
+    "methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
